kubernetes/discovery-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: discovery
  name: discovery
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: discovery
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/docker-default: "true"
        io.kompose.service: discovery
    spec:
      containers:
        - image: campusmecr.azurecr.io/discovery
          imagePullPolicy: Always
          name: service-discovery
          ports:
            - containerPort: 8761
          resources: {}
      restartPolicy: Always
status: {}
