kubernetes/notification-broker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: notification-broker
  name: notification-broker
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: notification-broker
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/docker-default: "true"
        io.kompose.service: notification-broker
    spec:
      containers:
        - env:
            - name: REDIS_URL
              valueFrom:
                secretKeyRef:
                  key: redis_url
                  name: campusme-secrets
          image: campusmecr.azurecr.io/notification-broker
          imagePullPolicy: Always
          name: notification-broker
          resources: {}
      restartPolicy: Always
status: {}
